--- a/home/templates/home/links.html
+++ b/home/templates/home/links.html
@@ -235,9 +235,9 @@
                                     <div class="card-body position-relative my-2 mx-2 pb-0">
                                         <a href="http://www.thelondonbuscompany.co.uk/" target="_blank"
                                             class="card-link">
-                                            <img class="buslogo position-absolute top-40 start-50 translate-middle"
+                                            <img class="position-absolute top-40 start-50 translate-middle"
                                                 src="{{MEDIA_URL}}logos/londonbuscompany.webp"
-                                                alt="London Bus Company Logo"><br>
+                                                alt="London Bus Company Logo" width="86px" height="46px"><br>
                                             <h6 class="card-title text-center pb-0">
                                                 London Bus Company</h6>
                                         </a>
@@ -409,9 +409,9 @@
                                     <div class="card-body position-relative my-2 mx-2 pb-0">
                                         <a href="http://www.richmonds-coaches.co.uk/ " target="_blank"
                                             class="card-link">
-                                            <img class="buslogo position-absolute top-40 start-50 translate-middle"
+                                            <img class="position-absolute top-40 start-50 translate-middle"
                                                 src="{{MEDIA_URL}}logos/richmond.webp"
-                                                alt="Richmond's Coaches logo"><br>
+                                                alt="Richmond's Coaches logo" width="80px" height="43px"><br>
                                             <h6 class="card-title text-center pb-0">
                                                 Richmond's Coaches</h6>
                                         </a>
@@ -448,8 +448,8 @@
                                 <div class="card">
                                     <div class="card-body position-relative my-2 mx-2 pb-0">
                                         <a href="https://www.southdown.net/" target="_blank" class="card-link">
-                                            <img class="buslogo position-absolute top-40 start-50 translate-middle"
-                                                src="{{MEDIA_URL}}logos/southdown.webp" alt="Southdown PSV logo"><br>
+                                            <img class=" position-absolute top-40 start-50 translate-middle"
+                                                src="{{MEDIA_URL}}logos/southdown.webp" alt="Southdown PSV logo" width="40px" height="40px"><br>
                                             <h6 class="card-title text-center pb-0">
                                                 Southdown PSV</h6>
                                         </a>
@@ -520,9 +520,9 @@
                                 <div class="card">
                                     <div class="card-body position-relative my-2 mx-2 pb-0">
                                         <a href="http://www.towertransit.co.uk/" target="_blank" class="card-link">
-                                            <img class="buslogo position-absolute top-40 start-50 translate-middle"
+                                            <img class="position-absolute top-40 start-50 translate-middle"
                                                 src="{{MEDIA_URL}}logos/tower_transit.webp"
-                                                alt="Tower Transit logo"><br>
+                                                alt="Tower Transit logo" height="48px" width="80px"><br>
                                             <h6 class="card-title text-center pb-0">
                                                 Tower Transit</h6>
                                         </a>
