--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
     {% block meta %}
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
+    <meta name="description" content="London Omnibus Traction Society Website">
     {% endblock %}
 
     {% block extra_meta %}
@@ -49,8 +50,8 @@
         <div class="row tophead">
             <div class="col-4 col-sm-6 my-auto py-3 text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <img class="d-none d-sm-block" src="{{MEDIA_URL}}logo-red.webp" height="75px" alt="LOTS Logo">
-                    <img class="d-block d-sm-none" src="{{MEDIA_URL}}logo-sm.webp" height="75px" alt="LOTS Logo">
+                    <img class="d-none d-sm-block" src="{{MEDIA_URL}}logo-red.webp" height="75px" width="280px" alt="LOTS Logo">
+                    <img class="d-block d-sm-none" src="{{MEDIA_URL}}logo-sm.webp" height="70px" width="80px"alt="LOTS Logo">
                 </a>
             </div>
             <!--  -->
