--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -97,7 +97,7 @@
 <div class="container-fluid">
     <div class="row ">
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/1.webp" alt="" width="60%" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/1.webp" alt="Front Cover of Magazine" width="200px" height="278px" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>TLB - The London Bus</strong></h5>
             <h6 class="text-center">Our flagship monthly title</h6>
@@ -107,7 +107,7 @@
                 class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/2.webp" alt="" width="60%" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/2.webp" alt="Front Cover of Magazine" width="200px" height="278px" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>LBM - London Bus Magazine</strong></h5>
             <h6 class="text-center">Our quarterly flagship title</h6>
@@ -117,7 +117,7 @@
                 class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/3.webp" alt="" width="60%" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/3.webp" alt="Front Cover of Magazine" width="200px" height="278px" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>Fleetbook</strong></h5>
             <h6 class="text-center">The London Bus and Tram Fleetbook, published annually</h6>
@@ -128,7 +128,7 @@
                 class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/4.webp" alt="" width="60%" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/4.webp" alt="Front Cover of Magazine" width="200px" height="278px" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>SUPS - Supplements</strong></h5>
             <h6 class="text-center">TLB Supplements</h6>
@@ -139,7 +139,7 @@
                 class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/5.webp" alt="" width="60%" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/5.webp" alt="Front Cover of Magazine" width="200px" height="278px" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>TLB Extra</strong></h5>
             <h6 class="text-center">Series of Booklets</h6>
@@ -151,7 +151,7 @@
                 class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/6.webp" alt="" width="60%" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/6.webp" alt="Front Cover of Magazine" width="200px" height="278px" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>REV - London Bus Review</strong></h5>
             <h6 class="text-center">Published every spring</h6>
