CRUD Images Uploaded

--- a/templates/includes/mob-nav.html
+++ b/templates/includes/mob-nav.html
@@ -5,7 +5,7 @@
             aria-controls="offcanvasNavbar" alt="Menu dropdown" aria-label="Navbar Menu">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <!-- <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel"> -->
             <div class="offcanvas-header">
                 <img class="mx-auto" src="{{MEDIA_URL}}logo-red.webp" width="220px" alt="LOTS Logo">
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close" alt="Close the dropdown-menu"></button></div>
@@ -32,6 +32,6 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        <!-- </div> -->
     </div>
 </nav>
