--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -18,37 +18,39 @@
             <div class="row mt-1 mb-2"></div>
             <div class="row">
                 {% for product in products %}
-                    {% if product.quantity_remaining > 0 %}
+                {% if product.quantity_remaining > 0 %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                    <div class="card h-100 border" >
+                    <div class="card h-100 border">
                         {% if product.image %}
-                        <a href="{% url 'product_detail' product.id %}">
-                            <img id="imgSales" class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                        <a href="{% url 'product_detail' product.id %}" class="text-black text-center">
+                            <img id="imgSales" class="card-img-top img-fluid" src="{{ product.image.url }}"
+                                alt="{{ product.name }}">{{ product.name }}
                         </a>
                         {% else %}
-                        <a id="NoImgSales" href="{% url 'product_detail' product.id %}">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.webp"
-                                alt="{{ product.name }}">
+                        <a href="{% url 'product_detail' product.id %}" class="text-black text-center ">
+                            <img class="card-img-top img-fluid NoImgSales" width="auto" src="{{ MEDIA_URL }}noimage.webp"
+                                alt="{{ product.name }}">{{ product.name }}
                         </a>
                         {% endif %}
-                        <a href="{% url 'product_detail' product.id %}">
+                        <!-- <a href="{% url 'product_detail' product.id %}">
                             <div class="card-body pb-0 pt-0 text-center">
+
                                 <p class="text-dark">{{ product.name }}</p>
-                            </div>
-                            
-                            {% if request.user.is_superuser %}
-                                    <small class="ml-3">
-                                        <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                                    </small>
-                            {% endif %}
-                            <div class="card-footer text-bg-danger pt-0 border-0 text-center">
-                                <div class="row ">
-                                    <div class="col">
-                                        <p class="lead mb-0 text-left font-weight-bold ">£{{ product.price }}</p>
-                                    </div>
+                            </div> -->
+
+                        {% if request.user.is_superuser %}
+                        <small class="ml-3">
+                            <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        </small>
+                        {% endif %}
+                        <div class="card-footer text-bg-danger pt-0 border-0 text-center">
+                            <div class="row ">
+                                <div class="col">
+                                    <p class="lead mb-0 text-left font-weight-bold ">£{{ product.price }}</p>
                                 </div>
                             </div>
+                        </div>
                     </div>
                     </a>
                 </div>
