Wave Edits to pages

--- a/home/templates/home/about_us.html
+++ b/home/templates/home/about_us.html
@@ -11,7 +11,7 @@
     </div>
     <hr>
     <div class="">    
-        <img src="{{MEDIA_URL}}buses/17.webp" class="aboutimg img-fluid"></img>
+        <img src="{{MEDIA_URL}}buses/17.webp" class="aboutimg img-fluid" alt="Bus Picture"></img>
         <p><br>
                 The London Omnibus Traction Society was founded in 1964, and now has one of the largest memberships
                 of
