--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="col-md-6">
                     <p>We will do our best to get back to you as soon as possible.</p>
-                    <p><img src="{{ MEDIA_URL }}bus-contact.webp" alt="Image" class="img-fluid"></p>
+                    <p><img src="{{ MEDIA_URL }}bus-contact.webp" alt="Inside Bus Picture" class="img-fluid"></p>
                 </div>
             </div>
         </div>
