--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,8 @@
         <div class="row tophead">
             <div class="col-4 col-sm-6 my-auto py-3 text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <img class="d-none d-sm-block" src="{{MEDIA_URL}}logo-red.webp" height="75px" width="280px" alt="LOTS Logo">
-                    <img class="d-block d-sm-none" src="{{MEDIA_URL}}logo-sm.webp" height="70px" width="80px"alt="LOTS Logo">
+                    <img class="d-none d-sm-block" src="{{MEDIA_URL}}logo-red.webp" height="75" width="280" alt="LOTS Logo">
+                    <img class="d-block d-sm-none" src="{{MEDIA_URL}}logo-sm.webp" height="70" width="80" alt="LOTS Logo">
                 </a>
             </div>
             <!--  -->
