--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,8 +15,8 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-6-md my-auto">
-                <a href="{% url 'membership' %}" id="btntopl"
-                    class="shop-now-button py-3 btn btn-lg border border-dark shadow-lg text-uppercase">How to join!</a>
+                <strong></strong><a href="{% url 'membership' %}" id="btntopl"
+                    class="shop-now-button py-3 btn btn-lg border border-dark shadow-lg text-uppercase text-black">How to join!</a></strong>
             </div>
         </div>
     </div>
@@ -49,7 +49,6 @@
         <!--  -->
     </div>
 </div>
-</div>
 <!-- Membership cards -->
 <div class="container-fluid">
     <div class="row ">
@@ -75,7 +74,7 @@
             </p>
             <br>
             <a href="{% url 'membership' %}"
-                class="btn btn-danger position-absolute top-100 start-50 border-0 translate-middle memberbtn" memberbtn>Become a
+                class="btn btn-danger position-absolute top-100 start-50 border-0 translate-middle memberbtn">Become a
                 Member</a>
         </div>
         <div class="col-12 col-lg-3 col-sm-5 pt-3 position-relative m-2 mb-5 border border-5 border-white rounded-4 memcard mx-auto">
@@ -97,7 +96,7 @@
 <div class="container-fluid">
     <div class="row ">
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/1.webp" alt="Front Cover of Magazine" width="200px" height="278px" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/1.webp" alt="Front Cover of Magazine" width="200" height="278" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>TLB - The London Bus</strong></h5>
             <h6 class="text-center">Our flagship monthly title</h6>
@@ -107,7 +106,7 @@
                 class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/2.webp" alt="Front Cover of Magazine" width="200px" height="278px" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/2.webp" alt="Front Cover of Magazine" width="200" height="278" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>LBM - London Bus Magazine</strong></h5>
             <h6 class="text-center">Our quarterly flagship title</h6>
@@ -117,7 +116,7 @@
                 class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/3.webp" alt="Front Cover of Magazine" width="200px" height="278px" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/3.webp" alt="Front Cover of Magazine" width="200" height="278" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>Fleetbook</strong></h5>
             <h6 class="text-center">The London Bus and Tram Fleetbook, published annually</h6>
@@ -128,7 +127,7 @@
                 class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/4.webp" alt="Front Cover of Magazine" width="200px" height="278px" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/4.webp" alt="Front Cover of Magazine" width="200" height="278" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>SUPS - Supplements</strong></h5>
             <h6 class="text-center">TLB Supplements</h6>
@@ -139,7 +138,7 @@
                 class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/5.webp" alt="Front Cover of Magazine" width="200px" height="278px" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/5.webp" alt="Front Cover of Magazine" width="200" height="278" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>TLB Extra</strong></h5>
             <h6 class="text-center">Series of Booklets</h6>
@@ -151,7 +150,7 @@
                 class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/6.webp" alt="Front Cover of Magazine" width="200px" height="278px" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/6.webp" alt="Front Cover of Magazine" width="200" height="278" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>REV - London Bus Review</strong></h5>
             <h6 class="text-center">Published every spring</h6>
