--- a/home/templates/home/membership.html
+++ b/home/templates/home/membership.html
@@ -42,6 +42,7 @@
                 <h6> plus 4 issues of LONDON BUS MAGAZINE</h6>
                 <div>
                     <table class="mx-auto">
+                        <tbody>
                         <tr>
                             <td class="text-start">£56.00 UK</td>
                             <td><a href="{% url 'tluk' %}"
@@ -60,6 +61,7 @@
                                     class="btn bg-danger bg-gradient p-2 m-2 shadow text-white"><strong>TLB +LBM
                                         World</strong></a></td>
                         </tr>
+                        </tbody>
                     </table>
                 </div>
                 <hr>
@@ -67,6 +69,7 @@
                 <h6>Includes 12 issues of THE LONDON BUS</h6>
                 <div>
                     <table class="mx-auto">
+                        <tbody>
                         <tr>
                             <td class="text-start">£36.00 UK</td>
                             <td><a href="{% url 'tuk' %}"
@@ -85,6 +88,7 @@
                                     class="btn bg-danger bg-gradient p-2 m-2 shadow text-white"><strong>TLB
                                         World</strong></a></td>
                         </tr>
+                    </tbody>
                     </table>
                 </div>
 
@@ -94,6 +98,7 @@
 
                 <div>
                     <table class="mx-auto">
+                        <tbody>
                         <tr>
                             <td class="text-start">£29.00 UK</td>
                             <td><a href="{% url 'luk' %}"
@@ -112,6 +117,7 @@
                                     class="btn bg-danger bg-gradient p-2 m-2 shadow text-white"><strong>LBM
                                         World</strong></a></td>
                         </tr>
+                    </tbody>
                     </table>
                 </div>
             </div>
