--- a/templates/includes/mob-nav.html
+++ b/templates/includes/mob-nav.html
@@ -2,13 +2,13 @@
     <div class="container-fluid px-0 mx-0">
         <a class="navbar-brand" href="#" aria-label="Navbar"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-            aria-controls="offcanvasNavbar" alt="Menu dropdown" aria-label="Navbar Menu">
+            aria-controls="offcanvasNavbar" title="Menu dropdown" aria-label="Navbar Menu">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar">
             <div class="offcanvas-header">
-                <img class="mx-auto" src="{{MEDIA_URL}}logo-red.webp" width="220px" alt="LOTS Logo">
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close" alt="Close the dropdown-menu"></button></div>
+                <img class="mx-auto" src="{{MEDIA_URL}}logo-red.webp" width="220" alt="LOTS Logo">
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close" title="Close the dropdown-menu"></button></div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
