Page edits competed

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-6-md my-auto">
-                <strong></strong><a href="{% url 'membership' %}" id="btntopl"
+                <strong><a href="{% url 'membership' %}" id="btntopl"
                     class="shop-now-button py-3 btn btn-lg border border-dark shadow-lg text-uppercase text-black">How to join!</a></strong>
             </div>
         </div>
@@ -36,10 +36,10 @@
                     website and see what’s out there!</strong></p>
             <!--  -->
             <br>
-            <h2 class="text-danger"><strong>Membership</strong></h2>
+            <h3 class="text-danger"><strong>Membership</strong></h3>
             <br>
-            <p>Becoming a LOTS member means you’ll receive both our information-packed TLB Newsletter and our
-                quarterly London Bus Magazine (or whichever one of these you choose).</p>
+            <h4>Becoming a LOTS member means you’ll receive both our information-packed TLB Newsletter and our
+                quarterly London Bus Magazine (or whichever one of these you choose).</h4>
             <p>Not only will you receive annual subscriptions for our monthly and quarterly publications, but you
                 will get exclusive access to our monthly meetings too.</p>
             <p>By joining you will also become part of a friendly and welcoming community of London bus enthusiasts
@@ -96,69 +96,52 @@
 <div class="container-fluid">
     <div class="row ">
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/1.webp" alt="Front Cover of Magazine" width="200" height="278" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/1.webp" alt="Front Cover of TLB Magazine" width="200" height="278" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>TLB - The London Bus</strong></h5>
             <h6 class="text-center">Our flagship monthly title</h6>
             <p class="text-center">The latest news about routes and vehicles.</p>
-            <br>
-            <a href="{% url 'membership' %}"
-                class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/2.webp" alt="Front Cover of Magazine" width="200" height="278" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/2.webp" alt="Front Cover of LBM Magazine" width="200" height="278" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>LBM - London Bus Magazine</strong></h5>
             <h6 class="text-center">Our quarterly flagship title</h6>
             <p class="text-center">Full of articles about past and present.</p>
-            <br>
-            <a href="{% url 'membership' %}"
-                class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/3.webp" alt="Front Cover of Magazine" width="200" height="278" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/3.webp" alt="Front Cover of London Bus and Tram Fleetbook" width="200" height="278" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>Fleetbook</strong></h5>
             <h6 class="text-center">The London Bus and Tram Fleetbook, published annually</h6>
             <p class="text-center">Is a 128-page pocket-sized book containing fleetlists for around 60 operators in
                 London and the Home Counties.</p>
-            <br>
-            <a href="{% url 'membership' %}"
-                class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
+
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/4.webp" alt="Front Cover of Magazine" width="200" height="278" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/4.webp" alt="Front Cover of SUPS Supplement" width="200" height="278" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>SUPS - Supplements</strong></h5>
             <h6 class="text-center">TLB Supplements</h6>
             <p class="text-center">Provide specialist information supplementary to that published in TLB and Fleetbook.
-                <br>
             </p>
-            <a href="{% url 'membership' %}"
-                class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/5.webp" alt="Front Cover of Magazine" width="200" height="278" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/5.webp" alt="Front Cover of TLB Extra" width="200" height="278" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>TLB Extra</strong></h5>
             <h6 class="text-center">Series of Booklets</h6>
             <p class="text-center">This is a series of booklets covering London Transport vehicle news for specific
-                years and is presented in the style of THE LONDON
-                BUS.</p>
-            <br>
-            <a href="{% url 'membership' %}"
-                class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
+                years and is presented in the style of THE LONDON BUS.</p>
         </div>
         <div class="col-12 col-lg-4 col-sm-5 pt-3 position-relative m-2 mb-5 mx-auto">
-            <img src="{{MEDIA_URL}}publications/6.webp" alt="Front Cover of Magazine" width="200" height="278" class="vstack mx-auto ">
+            <img src="{{MEDIA_URL}}publications/6.webp" alt="Front Cover of REV London Bus Review" width="200" height="278" class="vstack mx-auto ">
             <br>
             <h5 class="text-center"><strong>REV - London Bus Review</strong></h5>
             <h6 class="text-center">Published every spring</h6>
             <p class="text-center">Tells you everything you could possibly want to know about what’s been happening in
                 and around London during the preceding year.</p>
-            <br>
-            <a href="{% url 'membership' %}"
-                class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
+            
         </div>
     </div>
 </div>
