--- a/home/templates/home/membership.html
+++ b/home/templates/home/membership.html
@@ -17,7 +17,7 @@
         <div class="col-md-8">
             <div>
                 <p>The <strong>LONDON OMNIBUS TRACTION SOCIETY</strong>
-                    </span>brings together those interested in London’s buses, routes and ancillary transport services.
+                    brings together those interested in London’s buses, routes and ancillary transport services.
                     We
                     study, record and report on bus operators and operations in and around London, to a radius of about
                     36 miles
@@ -42,6 +42,12 @@
                 <h6> plus 4 issues of LONDON BUS MAGAZINE</h6>
                 <div>
                     <table class="mx-auto">
+                        <thead>
+                            <tr>
+                              <th></th>
+                              <th></th>
+                            </tr>
+                        </thead>
                         <tbody>
                         <tr>
                             <td class="text-start">£56.00 UK</td>
@@ -69,6 +75,12 @@
                 <h6>Includes 12 issues of THE LONDON BUS</h6>
                 <div>
                     <table class="mx-auto">
+                        <thead>
+                            <tr>
+                              <th></th>
+                              <th></th>
+                            </tr>
+                        </thead>
                         <tbody>
                         <tr>
                             <td class="text-start">£36.00 UK</td>
@@ -98,6 +110,12 @@
 
                 <div>
                     <table class="mx-auto">
+                        <thead>
+                            <tr>
+                              <th></th>
+                              <th></th>
+                            </tr>
+                        </thead>
                         <tbody>
                         <tr>
                             <td class="text-start">£29.00 UK</td>
@@ -125,8 +143,10 @@
         </div>
         <div class="col-md-4">
             <br>
-            <img class="pubimg" src="{{MEDIA_URL}}publications/Bus_Collection.webp" alt="">
+            <div class="text-center">
+            <img class="pubimg mx-auto" src="{{MEDIA_URL}}publications/Bus_Collection.webp" alt="Collection of all the magazines">
         </div>
+    </div>
     </div>
     <div class="row">
     </div>
