--- a/home/templates/home/publications.html
+++ b/home/templates/home/publications.html
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    <hr />
+    <hr>
     <div class="row">
         <h3>LBM - London Bus Magazine</h3>
         <div class="col-md-4">
@@ -99,7 +99,7 @@
             </div>
         </div>
     </div>
-    <hr />
+    <hr>
     <div class="row">
         <h3>Fleetbook</h3>
         <div class="col-md-4">
@@ -109,7 +109,7 @@
         <div class="col-md-5">
             <div>
                 <br>
-                <p>The <strong>LONDON BUS AND TRAM FLEETBOOK</strong></span> is a
+                <p>The <strong>LONDON BUS AND TRAM FLEETBOOK</strong> is a
                     128-page pocket-sized book containing full fleet details of around 50 operators in London and
                     the Home Counties.</p>
                 <p>Stock and registration numbers, chassis and body types, seating capacities, summaries of where to
