--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
     {% block meta %}
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
     <meta name="description" content="London Omnibus Traction Society Website">
     {% endblock %}
