--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -9,7 +9,7 @@
     <hr>
 </div>
 {% if from_name %}
-<div><h2>Thanks {{ from_name }} your message has been sent.</h2></div>
+<div><h2>Thanks {{ ContactDetails.from_name }} your message has been sent.</h2></div>
 {% endif %}
 
 <div class="container">
