--- a/templates/base.html
+++ b/templates/base.html
@@ -19,21 +19,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
-    
+
     {% block extra_css %}
     {% endblock %}
-    
+
     {% block corejs %}
-    <!-- <link rel="stylesheet" href="{% static 'js/script.js' %}"> -->
+    <!-- Font Awesome - JQuery - Bootstrap - Stripe Javascript Locations -->
     <script src="https://kit.fontawesome.com/9f41e2550b.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.js"
         integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" defer>
     </script>
-    <!-- Stripe -->
     <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
@@ -49,11 +46,14 @@
         <div class="row tophead">
             <div class="col-4 col-sm-6 my-auto py-3 text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <img class="d-none d-sm-block" src="{{MEDIA_URL}}logo-red.webp" height="75" width="280" alt="LOTS Logo">
-                    <img class="d-block d-sm-none" src="{{MEDIA_URL}}logo-sm.webp" height="70" width="80" alt="LOTS Logo">
+                    <!-- Header Image changes with the screen size -->
+                    <img class="d-none d-sm-block" src="{{MEDIA_URL}}logo-red.webp" height="75" width="280"
+                        alt="LOTS Logo">
+                    <img class="d-block d-sm-none" src="{{MEDIA_URL}}logo-sm.webp" height="70" width="80"
+                        alt="LOTS Logo">
                 </a>
             </div>
-            <!--  -->
+            <!-- This is the Dropdown menu for the Admin button for people to login, register, log out. -->
             <div class="col-8 col-sm-6 my-auto py-2 mx-0">
                 <ul class="list-inline list-unstyled text-end text-lg-right my-0 mx-0">
                     <li class="list-inline-item align-middle">
@@ -78,6 +78,7 @@
                             {% endif %}
                         </div>
                     </li>
+                    <!-- Displaying the Bag Items in realtime -->
                     <li class="list-inline-item align-middle">
                         <a href="{% url 'view_bag' %}"
                             class="{% if grand_total %}text-info font-weight-bold{% else %} text-black{% endif %} nav-link">
@@ -94,7 +95,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-
+                        <!-- Mobile Navigation  -->
                         {% include 'includes/mob-nav.html' %}
                     </li>
                 </ul>
@@ -106,11 +107,12 @@
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <!-- Desktop Navigation -->
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
     </header>
-
+<!-- Messages for the different instances of Error/Warning/Success or Info -->
     {% if messages %}
     <div class="message-container">
         {% for message in messages %}
@@ -137,24 +139,31 @@
 
     {% block postloadjs %}
     <script>
+        // Toasting Script
         document.addEventListener("DOMContentLoaded", function (event) {
             console.log(document.getElementById('liveToast'))
             if (document.getElementById('liveToast')) {
                 document.getElementById("liveToast").style.display = "inherit";
 
-                setTimeout(closetoast, 3000);
+                setTimeout(CloseToast, 3000);
 
-                function closetoast() {
+                function CloseToast() {
                     var closeJava = document.getElementById('closeJava')
                     var addToBag = document.getElementById('liveToastBtn')
                     closeJava.classList.add('collapse')
                 }
             }
         });
+
+        function droppydown() {
+            var droppydown = document.getElementById('droppydown')
+            droppydown.classList.toggle('show')
+        }
     </script>
     {% endblock %}
     <div class="mb-5"></div>
     <footer>
+        <!-- Footer Menu -->
         <nav class="text-light text-center">
             <a class="text-light" href="index.html">Home |</a>
             <a class="text-light" href="about.html">About Lots |</a>
@@ -166,8 +175,6 @@
             <a class="text-light" href="events.html">Events |</a>
             <a class="text-light" href="links.html">Links |</a>
             <a class="text-light" href="contact-us.html">Contact Us |</a>
-            <a class="text-light" href="cookie-policy.html">Cookie Policy |</a>
-            <a class="text-light" href="privacy-and-data-protection-policy.html">Privacy Policy</a>
         </nav>
         <div>
             <p class="text-light text-center">
@@ -175,12 +182,6 @@
             </p>
         </div>
     </footer>
-    <script>
-        function droppydown() {
-            var droppydown = document.getElementById('droppydown')
-            droppydown.classList.toggle('show')
-        }
-    </script>
 </body>
 
 </html>
