--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -2,29 +2,28 @@
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-center text-light" href="{% url 'home' %}"
-                id="home-link">Home</a></li>
-
+                id="home-link">Home</a>
+        </li>
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-center text-light" href="{% url 'membership' %}"
-                id="membership-link">How to join</a></li>
-
+                id="membership-link">How to join</a>
+        </li>
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-center text-light" href="{% url 'news' %}"
-                id="news-link">News</a></li>
-
+                id="news-link">News</a>
+        </li>
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-center text-light" href="{% url 'publications' %}"
-                id="pub-link">Publications</a></li>
-       
+                id="pub-link">Publications</a>
+        </li>
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-center text-light" href="{% url 'products' %}"
-                id="sales-link">Sales</a></li>
-
+                id="sales-link">Sales</a>
+        </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle logo-font font-weight-bold text-center text-light" href="#" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 About LOTS</a>
-                
             <ul class="dropdown-menu">
                 <li><a href="{% url 'about_us' %}" class="dropdown-item">About Us</a></li>
                 <li><a href="{% url 'links' %}" class="dropdown-item">Links</a></li>
