--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -5,14 +5,6 @@
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
-{% block page_header %}
-<!-- <div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div> -->
-{% endblock %}
-
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
@@ -21,7 +13,8 @@
             <h1 class="mt-3">Thank You</h1>
             <hr>
             <p class="text-black">Your order information is below. A confirmation email will be sent to
-                <strong>{{ order.email }}</strong>.</p>
+                <strong>{{ order.email }}</strong>.
+            </p>
         </div>
     </div>
 
@@ -154,7 +147,7 @@
                         <p class="mb-0">{{ order.country }}</p>
                     </div>
                 </div>
-             
+
 
                 <div class="row">
                     <div class="col">
