--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,12 +1,12 @@
+<!-- Toast indicating warning messages -->
 <div id="closeJava" class="toast-container position-fixed top-0 end-0 p-3">
-    <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-      <div class="toast-header bg-warning">
-        <i class="fa-solid fa-triangle-exclamation"> </i>
-        <strong class="me-auto"> &nbsp Warning</strong>
-      </div>
-      <div class="toast-body">
-        {{ message }}
-      </div>
+  <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header bg-warning">
+      <i class="fa-solid fa-triangle-exclamation"> </i>
+      <strong class="me-auto"> &nbsp Warning</strong>
+    </div>
+    <div class="toast-body">
+      {{ message }}
     </div>
   </div>
-      
+</div>
